Mon Oct 31 05:46:08 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_cipher.c (ossl_cipher_update): input data must
	  not be empty. [ruby-talk:161220]

	* test/openssl/test_cipher.rb: add test for Cipher#update("").

Mon Oct 31 05:38:26 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httpservlet/cgihandler.rb
	  (WEBrick::HTTPServlet::CGIHandler#do_GET): the value of Set-Cookie:
	  header field should be splited into each cookie.  [ruby-Bugs:2199]

	* lib/webrick/cookie.rb (WEBrick::Cookie.parse_set_cookie): new method
	  to parse the value of Set-Cookie: header field.

	* test/webrick/test_cookie.rb, test/webrick/test_cgi.rb,
	  test/webrick/webrick.cgi: add some test for cookie.

Mon Oct 31 02:31:41 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* test/ruby/test_float.rb (test_precision): test by assert_in_delta.
	  [ruby-dev:27575]

Sat Oct 29 16:56:03 2005  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb: added seven predicates sunday? to saturday?.

	* lib/date.rb: added two methods {prev,next}_month,
	  that are almost same as << and >>.

Thu Oct 27 20:34:43 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enumerator.c (enumerator_allocate): allow subclassing.

Thu Oct 27 16:45:31 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (scan_once): wrong condition to use mbclen2().
	  [ruby-dev:27535]

Thu Oct 27 11:53:17 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* missing.h, missing/memcmp.c, missing/memmove.c:
	  ANSI compatible interface.

Wed Oct 26 09:15:48 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/syck/implicit.c (syck_type_id_to_uri): should return
	  newly allocated memory. otherwise, type_id will be freed
	  twice. [ruby-dev:27384] [ruby-core:6385]

Wed Oct 26 01:58:19 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_EXTERN): macro to export symbols in shared
	  library.  [ruby-core:05528]

	* defines.h, {bcc32,win32,wince}/Makefile.sub (RUBY_EXTERN): moved to