@@ -62,6 +62,7 @@ unless have_header("openssl/conf_api.h")
 end
 
 message "=== Checking for OpenSSL features... ===\n"
+have_func("ERR_peek_last_error")
 have_func("BN_mod_add")
 have_func("BN_mod_sqr")
 have_func("BN_mod_sub")
